automatically backed up by learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
 <h1>Recipe App Index Page</h1>
 
 <% @recipe.each do |rec| %>
-  <a href='/recipe/<%=rec.id%>'><%=</a>
+  <a href='/recipe/<%=rec.id%>'><%=rec.name%></a>
