--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,4 +1,4 @@
 <h1><%=@recipe.name%></h1>
 
-<p><%=@recipe.name%></p>
-<p><%=@recipe.name%></p>
+<p><%=@recipe.ingredients%></p>
+<p><%=@recipe.cook_time%></p>
